--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -12,7 +12,7 @@
                         <img th:src="${profile.get('picture')}" class="rounded-circle img-fluid profile-picture"/>
                     </div>
                     <div class="col-md text-center text-md-left">
-                        <h2 th:text="${profile.get('name')}"/>
+                        <h2 th:text="${profile.get('nickname')}"/>
                         <p class="lead text-muted" th:text="${profile.get('email')}"/>
                     </div>
                 </div>
